syntax = "proto3";
package com.mentor4you;
option java_package = "com.mentor4you.grpc";
option java_multiple_files = true;

message JwtTokenCheckRequest {
  string token = 1;
}

message JwtTokenCheckResponse {
  bool isValid = 1;
}

service GrpcJwtTokenService {
  rpc checkToken(JwtTokenCheckRequest) returns (JwtTokenCheckResponse) {};
}